Update vue modules
+ Update vue modules

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
-    "vue-cli-plugin-bootstrap-vue": "~0.7.0",
+    "vue-cli-plugin-bootstrap-vue": "^0.7.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
