--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vueex": "^0.1.4",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
